--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <title>Good Company - Anime figures shop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<body class="bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary border-bottom border-secondary sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Good Company</a>
+            <a class="navbar-brand" href="./index.html">Good Company</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Domov</a>
-                    <a class="nav-link" href="#">Figurky</a>
-                    <a class="nav-link" href="#">O nás</a>
-                </div>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./index.html" >Domov</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./figurky.html" >Figurky</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./onas.html">O nás</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary px-3 mx-2 text-light" href="./login.html" >Přihlášení</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-dark px-3 mx-2 text-light" href="./signup.html" >Registrace</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
+    <div class="container mt-3 py-5 text-center">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="display-4 text-light">Good Company</h1>
+            <p class="text-light px-4">Nejlepší firma pro koupi anime figurek. Děláme pro vás kvalitní figurky již přes 20 let.</p>
+        </div>
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide container w-75" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/images/1.webp" class="d-block w-100" height="600" alt="první obrázek">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/images/2.webp" class="d-block w-100" height="600" alt="druhý obrázek">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/images/3.webp" class="d-block w-100" height="600" alt="třetí obrázek">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <footer class="border-top text-center text-lg-start mt-5">
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            Všechny obrázky patří GoodSmile Company
+        </div>
+    </footer>
 </body>
 </html>
