--- a/login.html
+++ b/login.html
@@ -3,32 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>Good Company - Anime figures shop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 </head>
 <body class="bg-primary">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top border-bottom border-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">Good Company</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Domov</a>
-                    <a class="nav-link" href="./figurky.html">Figurky</a>
-                    <a class="nav-link" href="./onas.html">O nás</a>
-                </div>
-            </div>
-            <div class="d-flex align-items-center">
-                <button type="button" class="btn btn-primary px-3 mx-2">
-                    Přihlášení
-                </button>
-                <button type="button" class="btn btn-dark px-3 mx-2">
-                    Registrace
-                </button>
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="./index.html" >Domov</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./figurky.html" >Figurky</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./onas.html">O nás</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-primary px-3 mx-2 text-light" href="./login.html" >Přihlášení</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-dark px-3 mx-2 text-light" href="./signup.html" >Registrace</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
+    <div class="mask d-flex align-items-center h-100 gradient-custom-3 mt-3">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                    <div class="card">
+                        <div class="card-body p-5">
+                            <h2 class="text-uppercase text-center mb-5">Přihlášení</h2>
+                            <form>
+                                <div class="form-outline mb-4">
+                                    <a class="form-label">Email</a>
+                                    <input type="email" class="form-control form-control-lg" />
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <a class="form-label">Heslo</a>
+                                    <input type="password" class="form-control form-control-lg" />
+                                </div>
+                                <div class="d-flex justify-content-center">
+                                    <button type="button" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Přihlásit</button>
+                                </div>
+                                <p class="text-center text-muted mt-5 mb-0">Nemáte ještě účet? <a href="./signup.html" class="fw-bold text-body">Registruj se!</a></p>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="border-top text-center text-lg-start mt-5">
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            Všechny obrázky patří GoodSmile Company
+        </div>
+    </footer>
 </body>
 </html>
